TbaMUD is currently being developed by The Builder Academy. If you need any
help, find any bugs, or have ideas for improvement please stop by TBA. 
Rumble
The Builder Academy
builderacademy.net 9091
 
tbaMUD 3.55
[Jan 05 2008] - Rumble
  Fixed improper display of affections in stat player. (thanks Rhade)
[Jan 04 2008] - Rumble
  Removed the unused npc_class_types.
  Fix to affect_update and affect_join. (thanks Kyle and Jamdog)
[ 2007] - Rumble
  Removed the clsolc command. This option can still be set via "toggle clsolc."
[Jan 03 2007] - Rumble
  PLR_NOWIZLIST actually used now to prevent run_autowiz.
  Several _FLAGGED checks that I fixed for 128 bit in the wrong SVN directory and failed to committ.
[Dec 29 2007] - Rumble
  Fixed top_of_helpt bug being off by one. (thanks Jamdog)
  Fixed trigedit copy bug where it used real_room and not real_trigger. (thanks Jamdog)
[Dec 21 2007] - Rumble
  Fixed dg_affect crash caused by a typo on my part.
  Renamed shit again! No really in zmalloc.c unsigned char * shit.
[Dec 15 2007] - Rumble
  Showvnums shows [T#] for a single attached trig or [TRIGS] for multiple attached trigs (except for rooms since there is plenty of room to list all attached trigs).
  Fixed bug where showvnums would not show if attached. (thanks Sryth)
tbaMUD 3.54
[Nov 12 2007] - Rumble
  Updated users command to fix GET_INVIS_LEV bug.
  Updated the drink command to work in rooms where the sector type should logically allow it.
[Nov 04 2007] - Rumble
Increased the size of a mail message from 4k to 8k.
  Updated remove_player so that the players command would not show phantom users when someone self-deletes.
  Updated sedit_rooms_menu to prevent a crash bug when trying to display a shop with rooms that have been removed.
[Nov 01 2007] - Rumble
  Updated mag_objectmagic bug where action description was not being used correctly on scrolls.
  Increased the size of MAX_RAW_INPUT_LENGTH and PLR_DESC_LENGTH.
[Oct 19 2007] - Rumble